(fix) fixed align text in whiteFooterContainer

--- a/src/shared/ui/SectionTitle/SectionTitle.module.scss
+++ b/src/shared/ui/SectionTitle/SectionTitle.module.scss
@@ -1,13 +1,18 @@
 .titleContainer {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
 .title {
   text-align: center;
+  display: inline-block;
   color: #000;
   font-size: 32px;
   font-weight: 700;
-  border-bottom: 2px solid black;
   padding-bottom: 10px;
+  border-bottom: 2px solid black;
 }
+
+
