--- a/src/widgets/LayoutFooter/ui/LayoutFooter.module.scss
+++ b/src/widgets/LayoutFooter/ui/LayoutFooter.module.scss
@@ -33,10 +33,7 @@
     gap: 100px;
     padding-top: 150px;
   }
-  .footerWhiteContainer {
 
-    padding-left: 40px;
-  }
 }
 
 
@@ -45,6 +42,7 @@
   align-items: center;
   justify-content: center;
   background-color: white;
+  text-align: center;
   height: 50px;
   color: #000;
   font: {
@@ -52,5 +50,4 @@
     style: normal;
     weight: 700;
   };
-  line-height: normal;
 }
